# stock-index-app

./: .gitignore  README.md  datamodel-old  docker-compose.yaml  requirements.txt
backend/: Dockerfile  pyproject.toml  readme.md  requirements.txt
backend/app/: __init__.py  app.py  main.py
backend/app/api/v1/: data_export.py  index_construction.py  index_retrieval.py
backend/app/controllers/: controller_one.py  controller_two.py
backend/app/core/: configuration.py  exception.py  handler.py  logging.py  redis.py
backend/app/model/: serializable.py
backend/app/model/core/: composition_change.py  index_composition.py  index_performance.py
backend/app/model/dto/: composition_change.py  index_composition.py  index_performance.py
backend/app/model/export/: composition_change.py  index_composition.py  index_performance.py
backend/app/model/param/: index_construction.py  index_retrieval.py
backend/app/model/response/: error_response.py  success_response.py
backend/app/service/: compute.py  export.py  index_composition.py  index_construction.py  index_performance.py
backend/app/store/: cache.py  database.py
backend/app/use_case/: index_construction.py  index_export.py  index_retrieval.py
backend/app/util/: excel_exporter.py
database/init/: 00-create-schema.sql  01-insert-exchange.sql  02-insert-listing-status.sql  02-listing-type.sql  03-insert-country.sql  04-insert-listing-status.sql  04-insert-weighting-method.sql  05-insert-ranking-method.sql  05-view-listing-daily-market-cap-with-rank.sql  06-function-compute-index-daily-constituent.sql  06-insert-exchange-performance-metric.sql  06-insert-weighting-method.sql  06-procedure-compute-index-daily-constituent.sql  07-insert-index-definition.sql  07-insert-performance-metric.sql  07-procedure-compute-index-daily-performance.sql  08-function-get-index-performance.sql  (+5 more)
doc/: api-spec.md  architecture.drawio  datamodel.dbml
feeder/: Feeder.py  __init__.py  pyproject.toml  readme.md  requirements.txt
feeder/configuration/: configuration.yaml
feeder/data/duckdb/database/: database.duckdb
feeder/data/duckdb/json/: ticker.json  ticker_detail.json  ticker_price.json
feeder/data/normalisation/: normalisation.sql  normalization.sql
feeder/data/upload/: company.sql  company_financials.sql  listing.sql  listing_daily_performance.sql  listing_market_cap_change.sql
feeder/repository/: DailyTickerSummary.py  Tickers.py  __init__.py
feeder/sample/: sample.py
feeder/service/: Gather.py  Normalise.py  Upload.py  __init__.py
feeder/utility/: Commons.py  Configuration.py  DuckDB.py  Logger.py  Parser.py  Web.py  __init__.py
(+1 files in other folders)
