[tool.poetry]
name = "stock-index-backend"
version = "0.1.0"
description = "A professional Flask API for stock index app."
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-restx = "^1.3.0"
redis = "^5.0.0"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

