[tool.poetry]
name = "stock-index-app"
version = "0.1.0"
description = "Stock Index FastAPI Application"
authors = ["Sooraj P. G. <project.sooraj.pg@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
redis = "^5.0.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
pandas = "^2.2.0"
openpyxl = "^3.1.2"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
