[tool.poetry]
name = "feeder"
version = "0.1.0"
description = "Stock Index Feeder Application"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "1.4.3"
pyyaml = "6.0.3"
requests = "2.32.5"
psycopg2-binary = "*"
python-dotenv = "1.2.1"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.13.2"
aiosignal = "1.4.0"
attrs = "25.4.0"
certifi = "2025.11.12"
charset-normalizer = "3.4.4"
dotenv = "0.9.9"
frozenlist = "1.8.0"
idna = "3.11"
multidict = "6.7.0"
propcache = "0.4.1"
typing-extensions = "4.15.0"
urllib3 = "2.6.2"
yarl = "1.22.0"

[tool.poetry.scripts]
feeder = "Feeder:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
